[gd_scene load_steps=3 format=3 uid="uid://undps3vqfdyu"]

[ext_resource type="Script" uid="uid://dujrd70a3plxq" path="res://scripts/ui/Hotbar.gd" id="1_hotbar_script"]
[ext_resource type="Texture2D" uid="uid://bs887m54op843" path="res://assets/sprites/PostApocalypsePack/UI/Inventory/Inventory-Cell.png" id="2_mhob5"]

[node name="Hotbar" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -288.0
offset_top = -80.0
offset_right = 288.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_hotbar_script")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -30.0
offset_right = 288.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 8
columns = 9

[node name="Slot" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="GridContainer/Slot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mhob5")
expand_mode = 1
stretch_mode = 5

[node name="ItemIcon" type="TextureRect" parent="GridContainer/Slot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Stack Number" type="Label" parent="GridContainer/Slot"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -19.0
offset_top = -25.0
offset_right = 3.0
offset_bottom = -7.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "10"

[node name="SlotNumber" type="Label" parent="GridContainer/Slot"]
layout_mode = 2
offset_left = 44.0
offset_top = 4.0
offset_right = 48.0
offset_bottom = 18.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "1"

[node name="Slot2" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="GridContainer/Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mhob5")
expand_mode = 1
stretch_mode = 5

[node name="ItemIcon" type="TextureRect" parent="GridContainer/Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Stack Number" type="Label" parent="GridContainer/Slot2"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -21.0
offset_top = -24.0
offset_right = 1.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "10"

[node name="SlotNumber" type="Label" parent="GridContainer/Slot2"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -15.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 18.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "2"

[node name="Slot3" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="GridContainer/Slot3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mhob5")
expand_mode = 1
stretch_mode = 5

[node name="ItemIcon" type="TextureRect" parent="GridContainer/Slot3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Stack Number" type="Label" parent="GridContainer/Slot3"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -24.0
offset_right = 2.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "10"

[node name="SlotNumber" type="Label" parent="GridContainer/Slot3"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -15.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 18.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "3"

[node name="Slot4" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="GridContainer/Slot4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mhob5")
expand_mode = 1
stretch_mode = 5

[node name="ItemIcon" type="TextureRect" parent="GridContainer/Slot4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Stack Number" type="Label" parent="GridContainer/Slot4"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -21.0
offset_top = -24.0
offset_right = 1.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "10"

[node name="SlotNumber" type="Label" parent="GridContainer/Slot4"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -15.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 18.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "4"

[node name="Slot5" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="GridContainer/Slot5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mhob5")
expand_mode = 1
stretch_mode = 5

[node name="ItemIcon" type="TextureRect" parent="GridContainer/Slot5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Stack Number" type="Label" parent="GridContainer/Slot5"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -23.0
offset_right = -1.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "10"

[node name="SlotNumber" type="Label" parent="GridContainer/Slot5"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -15.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 18.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "5"

[node name="Slot6" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="GridContainer/Slot6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mhob5")
expand_mode = 1
stretch_mode = 5

[node name="ItemIcon" type="TextureRect" parent="GridContainer/Slot6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Stack Number" type="Label" parent="GridContainer/Slot6"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -22.0
offset_top = -24.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "10"

[node name="SlotNumber" type="Label" parent="GridContainer/Slot6"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -15.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 18.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "6"

[node name="Slot7" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="GridContainer/Slot7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mhob5")
expand_mode = 1
stretch_mode = 5

[node name="ItemIcon" type="TextureRect" parent="GridContainer/Slot7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Stack Number" type="Label" parent="GridContainer/Slot7"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -21.0
offset_top = -23.0
offset_right = 1.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "10"

[node name="SlotNumber" type="Label" parent="GridContainer/Slot7"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -15.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 18.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "7"

[node name="Slot8" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="GridContainer/Slot8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mhob5")
expand_mode = 1
stretch_mode = 5

[node name="ItemIcon" type="TextureRect" parent="GridContainer/Slot8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Stack Number" type="Label" parent="GridContainer/Slot8"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -24.0
offset_right = 2.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "10"

[node name="SlotNumber" type="Label" parent="GridContainer/Slot8"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -15.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 18.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "8"

[node name="Slot9" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="GridContainer/Slot9"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mhob5")
expand_mode = 1
stretch_mode = 5

[node name="ItemIcon" type="TextureRect" parent="GridContainer/Slot9"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Stack Number" type="Label" parent="GridContainer/Slot9"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -19.0
offset_top = -24.0
offset_right = 3.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "10"

[node name="SlotNumber" type="Label" parent="GridContainer/Slot9"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -15.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 18.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "9"
